...
                }
            }
            HStack {
                Button(action: {
                    showCreateCheckpointSheet = true
                }, label: {
                    Text("Add Checkpoint").modifyAdd()
                })
                Button(action: addTreasureHunt) {
                    Image(systemName: "checkmark").modifyButton(backgroundColor: Color.init(#colorLiteral(red: 0.3084011078, green: 0.5618229508, blue: 0, alpha: 1)))
                }.padding()
            }
        }
...
